Fix home button glitch.

Home button was not set to its preferred size before it was added to the
toolbar, which resulted in its image getting cut off when it was first
rendered after being hidden.

This CL also changes when we set the visibility of the home button
from every time we do ToolbarView::Layout() to only when its visibility
actually changes.

Bug: 916092
Change-Id: I5f680536d76f629faf2712dcfa3cf1aa527d1e04
Reviewed-on: https://chromium-review.googlesource.com/c/1382958
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Dana Fried <dfried@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617993}
Former-commit-id: 1379fbc9bc73b39541c0d5a2af5d6f24a83e903a